--- a/src/app.css
+++ b/src/app.css
@@ -1,17 +1,9 @@
-/*@font-face {*/
-/*  font-family: 'TODO';*/
-/*  font-style: normal;*/
-/*  font-weight: 400;*/
-/*  src: local(''),*/
-/*  url('/fonts/TODO.woff2') format('woff2'),*/
-/*  url('/fonts/TODO.woff') format('woff');*/
-/*}*/
-/* OR USE FONTSOURCE see layout.svelte */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap');
 
 @tailwind base;
 @layer base {
   html {
-    font-family: system-ui, sans-serif;
+    font-family: 'Lato', system-ui, sans-serif;
     height: 100%;
   }
 
@@ -22,6 +14,10 @@
 }
 
 @layer components {
+
+  .h1, .h2 {
+    font-family: 'Montserrat', sans-serif;
+  }
 
   .h1 {
     @apply font-bold;
