--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap');
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/Lato/Lato-Regular.ttf") format("truetype");
+}
 
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/Montserrat/Montserrat-VariableFont_wght.ttf") format("truetype");
+}
 @tailwind base;
 @layer base {
   html {
-    font-family: 'Lato', system-ui, sans-serif;
+    font-family: "Lato", system-ui, sans-serif;
     height: 100%;
   }
 
@@ -14,9 +25,9 @@
 }
 
 @layer components {
-
-  .h1, .h2 {
-    font-family: 'Montserrat', sans-serif;
+  .h1,
+  .h2 {
+    font-family: "Montserrat", sans-serif;
   }
 
   .h1 {
