--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @tailwind base;
 @layer base {
   html {
-    font-family: "Lato", system-ui, sans-serif;
+    font-family: "Overpass", system-ui, sans-serif;
     height: 100%;
   }
 
